--- a/1-ACF-PACF/acf_pacf.ipynb
+++ b/1-ACF-PACF/acf_pacf.ipynb
@@ -5,10 +5,10 @@
    "metadata": {},
    "source": [
     "## Analyse Ice cream production data using ACF & PACF\n",
-    "\n",
-    "\n",
-    "\n",
-    "##### Purpose : To know which data that are relevant for prediction using ARIMA later on"
+    "<br> </br>\n",
+    "##### Purpose : To know which data that are relevant for prediction using ARIMA later on\n",
+    "<br> </br>\n",
+    "Source : https://www.youtube.com/watch?v=y8opUEd05Dg&list=PLvcbYUQ5t0UHOLnBzl46_Q6QKtFgfMGc3&index=24&t=1s"
    ]
   },
   {
@@ -29,75 +29,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>production</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>date</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2010-01-01</th>\n",
-       "      <td>91.2895</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2010-02-01</th>\n",
-       "      <td>110.4994</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2010-03-01</th>\n",
-       "      <td>127.0971</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2010-04-01</th>\n",
-       "      <td>132.6468</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2010-05-01</th>\n",
-       "      <td>134.5576</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            production\n",
-       "date                  \n",
-       "2010-01-01     91.2895\n",
-       "2010-02-01    110.4994\n",
-       "2010-03-01    127.0971\n",
-       "2010-04-01    132.6468\n",
-       "2010-05-01    134.5576"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "121\n"
+     ]
     }
    ],
    "source": [
@@ -111,7 +51,8 @@
     "start_date = pd.to_datetime('2010-01-01')\n",
     "df_ic = df_ic[start_date:]\n",
     "\n",
-    "df_ic.head()"
+    "df_ic.head()\n",
+    "print(len(df_ic.production))"
    ]
   },
   {
